# vcpkg-test

./: CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp
